--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="navegacao_titulo">ATM Consultoria</string>
+    <string name="navegacao_email">atendimento@atmconsultoria.com.br</string>
 </resources>
